# afritelematics

./: .coveragerc  .dockerignore  .gitignore  AfriTech_Main.txt  AfriTech_Progress.txt  AfriTech_V3.txt  AfriTech_V3_B.txt  AfriTech_V3_C.txt  AfriTech_V4.txt  Architecture_H.txt  CANONICAL_SEMANTIC_COMPLETION.txt  README.md  afriPower.txt  afriTech2.txt  afriTech_features.py  afritech_v1.txt  build_witness.sh  conftest.py  coverage.xml  db.sqlite3  imports.txt  kernel_hash.txt  package-lock.json  partner-session.json  pilot_report.md  private_key.pem  proof.json  public_key.pem  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run_node.py  test.txt
.github/workflows/: afriride_proof_pipeline.yml  app_surface_guard.yml  architecture.yml  constitutional_ci.yml  constitutional_enforcement.yml  ga_plus_plus_plus.yml
AfriProgramming_Investor_Package/: README.md
AfriProgramming_Investor_Package/01_Pitch/: Deck_Outline.md  Speaker_Notes.md
AfriProgramming_Investor_Package/02_Product/: Demo_Guide.md
AfriProgramming_Investor_Package/03_Technical/: Architecture_Summary.md  Whitepaper.md
AfriProgramming_Investor_Package/04_Business/: One_Pager.md  Roadmap.md
AfriProgramming_Investor_Package/05_Outreach/: Followup_Sequence.txt  Investor_Email.txt  Meeting_Script.md
AfriProgramming_Investor_Package/06_Media/: Demo_Video_Script.txt  Landing_Page_Copy.md
AfriRideMobile/: App.js  README.md  package-lock.json  package.json
afri_back_files/: AfriTech_ProgressV3.txt  AfriTech_ProgressV4.txt  Afri_D.txt  Afritech_snapshotV1.txt  Afritech_snapshotV4.txt  SOURCES.txt  kernel_hash.txt  registry-hash.txt  top_level.txt  traceability.txt
afriprogramming_demo/: index.html
afriprogramming_demo/src/: app.js  demoData.js  styles.css
afriride/: __init__.py
afriride-driver/: app.json  package-lock.json  package.json
afriride/field_validation/: __init__.py  day_one_runbook.py  device_logger.py  dispute_runner.py  event_buffer.py  field_proof.py  live_pilot_protocol.py  post_pilot_analysis.py  proof_observability.py  stakeholder_evidence_report.py  sync_replayer.py
afriride_backend/: README.md  __init__.py
afriride_backend/analytics/: models.py  services.py
afriride_backend/billing/: models.py  services.py
afriride_backend/certification/: certificates.py  models.py  reports.py  services.py  validators.py
afriride_backend/compliance/: audit.py  certificates.py
afriride_backend/config/: __init__.py  asgi.py  routing.py  settings_channels_snippet.py
afriride_backend/currency/: converter.py  models.py
afriride_backend/dispatch/: __init__.py  matching.py  models.py  services.py
afriride_backend/earnings/: models.py  services.py
afriride_backend/enforcement/: actions.py  guards.py
afriride_backend/fleets/: models.py  services.py
afriride_backend/fraud/: anomaly_detection.py  rules.py  services.py
afriride_backend/government/: integrations.py  models.py  services.py
afriride_backend/gps/: fraud_detection.py  models.py  serializers.py  services.py  urls.py  views.py
afriride_backend/intelligence/: authority.py  demand_prediction.py  dispatch_optimizer.py  driver_positioning.py  surge_pricing.py
afriride_backend/network/: deployment.py  failover.py  regions.py  routing.py  tenancy.py
afriride_backend/operations/: incidents.py  monitoring.py  noc.py  runbooks.py  status.py
afriride_system/: __init__.py
afritech/: ARCHITECTURE_AUTHORITY.md  TRUTH_MODEL.md  __init__.py  apps.py  main.py  ops_dashboard.py  partner_registry.py  partner_verification.py  standards_dependency.py  trust_network.py
afritech.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
afritech_v1/: main.py
dashboard/: index.html  package-lock.json  package.json
docs/: AfriTech_Final_Canonical.md  AfriTech_Final_Fixed-Point_Characterization.md  AfriTech_Final_Irreducible_Admissibility_Algebra.md  AfriTech_Irreducible_Admissibility_Algebra.md  AfriTech_Terminal_Canonical_Closure.md  Afritech_Canonical_Specification_final.md  Afritech_System_Documentation.md  Deferred_Capabilities.md  README.md  STATUS_CONVENTIONS.md  afritech_canonical_specification.md  final_operationaal_baseline.md
driver_app/: App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
ecosystems/: __init__.py
mutants/: .gitignore  pyproject.toml  pytest.ini
mutants/afritech/afripower/: constants.py  graph_projection.py  projection_models.py
mutants/afritech/afripower/adapters/: receipt_provider.py
mutants/afritech/afripower/ai_reasoning/: constants.py  engine.py  explain.py  insights.py
mutants/afritech/afripower/contracts/: read_only_contract.py
mutants/afritech/afripower/dashboard/: constants.py  metrics.py  serializers.py  services.py  views.py
mutants/afritech/afripower/graph/: constants.py  models.py  projection.py  query.py  serializers.py
mutants/afritech/ci/: afripower_intelligence_validator.py
replay_dashboard/: index.html  package-lock.json  package.json
rider_app/: App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
scripts/: afriride_load_harness.py  afriride_postgres_cutover_runbook.sh  afriride_replay_diff_checker.py  afriride_sqlite_to_postgres_migrate.py  bootstrap_ec2_afritech.sh  check_chain_ready.sh  check_live_afriride.sh  cleanup_docker.sh  deploy_production_compose.sh  export_adr_to_md.py  export_architecture_compliance_pack.sh  generate_architecture_graph.py  run_afroprog_workspace_checks.sh  run_cutover_gate.sh  run_external_verifier.sh  run_local_production_probe.sh  run_partner_verification_session.sh  run_phase1_setup.sh  run_public_verifier.sh  run_remote_afritech_verification.sh  sync_repo_to_ec2.sh  test_anchor.sh  verify_all.sh
tools/: generate_certificate_hash.py
traces/: sample_trace.json
(+3304 files in other folders)
