[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afritech"
version = "0.1.0"
description = "AfriTech constitutional execution and replay verification system"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["afritech*"]